[package]
name = "prepare_swagger"
version = "0.1.2"
edition = "2024"

[dependencies]
indexmap = { version = "2.10.0", features = ["serde"] }
reqwest = { version = "0.12.20", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.9"
regex = "1.11.1"
convert_case = "0.8.0"
