[package]
edition = "2024"
name    = "prepare_swagger"
version = "0.2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
convert_case = "0.11.0"
indexmap     = { version = "2.10.0", features = ["serde"] }
napi         = "3.0.0"
napi-derive  = "3.0.0"
regex        = "1.11.1"
reqwest      = { version = "0.13.0", features = ["blocking"] }
serde        = { version = "1.0.219", features = ["derive"] }
serde_json   = { version = "1.0", features = ["preserve_order"] }
serde_yaml   = "0.9"

[build-dependencies]
napi-build = "2"

[profile.release]
lto   = true
strip = "symbols"
